[package]
name = "contile"
version = "0.3.0"
authors = [
  "Philip Jenvey <pjenvey@underboss.org>",
  "jrconlin <jr+git@mozilla.com>",
  "Mozilla Services Engineering <services-engineering+code@mozilla.com>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Enables line numbers in Sentry
debug = 1

[dependencies]
actix-cors = "0.5"
actix-http = "2"
actix-rt = "1"  # 2+ breaks testing, May need actix-web 4+?
actix-web = "3"
backtrace = "0.3"
bytes = "1.0"
cadence = "0.25"
chrono = "0.4"
docopt = "1.1"
cloud-storage = "0.6" # 0.7+ includes request 0.11, tokio 1.4
config = "0.11"
dashmap = "4.0.2"
futures = "0.3"
hex = "0.4"
hostname = "0.3"
image = "0.23"
lazy_static = "1.4"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
maxminddb = "0.17"
regex = "1.4"
reqwest = { version = "0.10", features = ["json"] } # 0.11+ conflicts with actix & tokio. Block until actix-web 4+?
serde = "1.0"
# pin to 0.19 (until our onpremise is upgraded):
# https://github.com/getsentry/sentry-rust/issues/277
sentry = "0.19"
sentry-backtrace = "0.19"
serde_json = "1.0"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_info", "dynamic-keys"] }
slog-async = "2.6"
slog-envlogger = "2.2.0"
slog-mozlog-json = "0.1"
slog-scope = "4.4"
slog-stdlog = "4.1"
slog-term = "2.7"
thiserror = "1.0"
# pinning to 0.2.4 due to dependencies (actix, etc.)
tokio = { version = "0.2.4", features = ["macros", "sync"] }
url = "2"
woothee = "0.11"
