[tool.black]
line-length = 88


[tool.isort]
profile = "black"
skip_gitignore = true


[tool.mypy]
python_version = "3.11"
disallow_untyped_calls = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_error_codes = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unreachable = true


[tool.poetry]
name = "contract-tests"
version = "0.1.0"
description = "Contract tests"
authors = ["Mozilla"]
license = "Mozilla Public License Version 2.0"

[tool.poetry.dependencies]
python = "^3.11"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"
pydantic = "^1.10.4"
types-requests = "^2.28.11.8"
types-pyyaml = "^6.0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
