[tool.poetry]
name = "partner"
version = "0.1.0"
description = "A Python-based web service fake for the contract tests"
authors = ["Mozilla"]
license = "Mozilla Public License Version 2.0"

[tool.poetry.dependencies]
python = "^3.8.13"
fastapi = "^0.89.1"
gunicorn = "^20.1.0"
pyyaml = "^6.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
